[PN-17470] fix: removed discriminator and added legacy behavior for TimelineElementDetailsV27 generation