@@ -9,10 +9,10 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.reactive.WebFluxTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.reactive.server.WebTestClient;
 import reactor.core.publisher.Mono;
 
@@ -34,9 +34,9 @@ class PnLegalFactsControllerTest {
 
     @Autowired
     WebTestClient webTestClient;
-    @MockBean
+    @MockitoBean
     private TimelineUtils timelineUtils;
-    @MockBean
+    @MockitoBean
     private GetLegalFactService getLegalFactService;
 
     @Test
@@ -359,7 +359,7 @@ class PnLegalFactsControllerTest {
                     assert problem != null;
                     Assertions.assertNotNull(problem.getDetail());
                     Assertions.assertNotNull(problem.getTitle());
-                    Assertions.assertEquals(ERROR_CODE_DELIVERYPUSH_NOTIFICATIONCANCELLED,problem.getErrors().get(0).getCode());
+                    Assertions.assertEquals(ERROR_CODE_DELIVERYPUSH_NOTIFICATIONCANCELLED,problem.getErrors().getFirst().getCode());
                 }
             );
 
